Added Back function on topbar.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,20 +15,39 @@
         <activity
             android:label="@string/category_numbers"
             android:name=".NumbersActivity"
-            android:exported="false"
-             />
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PERENT_ACTIVITY"
+                android:value=".MainActivity"
+                />
+        </activity>
         <activity
             android:label="@string/category_phrases"
             android:name=".PhrasesActivity"
-            android:exported="false" />
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PERENT_ACTIVITY"
+                android:value=".MainActivity"
+                />
+        </activity>
         <activity
             android:label="@string/category_family"
             android:name=".FamilyActivity"
-            android:exported="false" />
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PERENT_ACTIVITY"
+                android:value=".MainActivity"
+                />
+        </activity>
         <activity
             android:label="@string/category_colors"
             android:name=".ColorActivity"
-            android:exported="false" />
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PERENT_ACTIVITY"
+                android:value=".MainActivity"
+                />
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
